--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
-    "expo": "~49.0.13",
-    "expo-status-bar": "~1.6.0",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "expo": "^49.0.13",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-status-bar": "~1.2.0",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.5",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-scripts": "^5.0.1",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "concurrently": "^8.2.1",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.3.3"
   },
   "private": true
 }
